--- a/view/photos.ejs
+++ b/view/photos.ejs
@@ -23,7 +23,7 @@
 <body>
     <a class="gobacklink" href="<% HOST %>/back">Go back</a>
     <% function getBreedPhotoPath(path) { %>
-        <li class="one-breed__item"><img src="<%= path %>"/></li>
+        <li class="breeds-list__item breed-item"><img src="<%= path %>"/></li>
         <% } %>
     <h1 style="text-transform: capitalize;"><%= breed %></h1>
     <ul class="breeds-list one-breed">
